--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivity">
 
-
     <fragment
         android:id="@+id/google_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -30,13 +29,13 @@
             android:layout_marginTop="5dp">
 
             <Button
-                android:id="@+id/bt_gst_mrk"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:layout_marginStart="120dp"
-                android:text="Salva i marcatori"/>
-+
+                    android:id="@+id/bt_sve_mrk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:layout_marginStart="120dp"
+                    android:text="Salva i marcatori"/>
+            +
         </LinearLayout>
 
     </LinearLayout>
